--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,3 +16,39 @@ body {
   font-style: normal;
   color: white;
 }
+
+#Home-Section {
+  background-image: url("../img/bg-home.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left;
+}
+
+.img-logo-phone {
+  max-width: 50%;
+}
+
+.cont-img-profile {
+  align-content: center;
+  text-align-last: center;
+}
+
+.img-profile {
+  width: 60%;
+  border-radius: 10%;
+}
+
+@media (max-width: 768px) {
+  .navbar-brand {
+    width: 200px;
+  }
+
+  .img-logo-phone {
+    height: auto;
+    max-width: 100%;
+  }
+
+  .img-profile {
+    width: 90%;
+  }
+}
