implemetación y desarrollo de sección portafolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,17 @@ body {
   font-size: 20px;
 }
 
+#portafolio {
+  background-image: url("../img/bg-home.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left;
+}
+
+.width-my-card {
+  width: 100%;
+}
+
 @media (max-width: 768px) {
   .navbar-brand {
     width: 200px;
@@ -79,5 +90,9 @@ body {
 
   .img-profile {
     width: 90%;
+  }
+
+  .mt3-modify{
+    margin-top: 1rem !important;
   }
 }
