--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ body {
 }
 
 #portafolio {
-  background-image: url("../img/bg-home.png");
+  background-image: url("../img/bg-portafolio.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
