Cambios en clase portafolio y color del footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ body {
   margin-right: 10px;
 }
 
-#portafolio {
+#portfolio {
   background-image: url("../img/bg-portafolio.png");
   background-repeat: no-repeat;
   background-size: cover;
